force-app/main/default/objects/FaixaFaturamento__c/FaixaFaturamento__c.object-meta.xml
<CustomObject>
    <label>Faixa de Faturamento</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faixas de Faturamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>