force-app/main/default/objects/FaixaFaturamento__c/fields/CodigoFaixa__c.field-meta.xml
<CustomField>
    <fullName>CodigoFaixa__c</fullName>
    <externalId>true</externalId>
    <label>Código da Faixa</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>