force-app/main/default/objects/FaixaFaturamento__c/fields/FaixaAte__c.field-meta.xml
<CustomField>
    <fullName>FaixaAte__c</fullName>
    <label>Faixa Até</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>