force-app/main/default/objects/FaixaFaturamento__c/fields/FaixaDe__c.field-meta.xml
<CustomField>
    <fullName>FaixaDe__c</fullName>
    <label>Faixa de</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>