force-app/main/default/objects/FaixaFaturamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FaixaDe__c</columns>
    <columns>FaixaAte__c</columns>
    <columns>Descricao__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>