force-app/main/default/objects/FaixaFaturamento__c/listViews/Criadas_pela_Integra_o.listView-meta.xml
<ListView>
    <fullName>Criadas_pela_Integra_o</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>ifutu</value>
    </filters>
    <label>Criadas pela Integração</label>
</ListView>